<resources>
    <string name="app_name">QuizApp</string>
    <string name="quiz_app">Quiz App</string>
    <string name="name">Name</string>
    <string name="start">Start</string>
    <string name="please_enter_your_name">Please Enter Your Name:</string>
    <string name="welcome">Welcome</string>
    <string name="what_country_does_this_flag_belong_to">What country does this flag belong to?</string>
    <string name="image">image</string>
    <string name="submit">SUBMIT</string>
    <string name="result">Result</string>
    <string name="hey_congratulations">Hey! Congratulations!</string>
    <string name="username">Username</string>
    <string name="your_score_is_9_out_of_10">Your Score is 9 out of 10</string>
    <string name="finish">FINISH</string>
    <string name="starplayer">Who is the star player for this team:</string>
</resources>